2.4.9 -> 2.4.10:
	- obsolete entries could cause segv's during upgrades
	- sources now installed with uid/gid of process rather then
	  the ids used when the src rpm was created

2.4.8 -> 2.4.9:
	- fix for verification on systems where a single group id
	  maps to mulitiple group names (Benedict Lofstedt)
	- added 'make tar' rule for building a distribution tarball
	  (Horacio Rodriguez Montero)
	- fixed serial number handling in dependencies and install
	  code
	- make mips compatible with noarch
	- fixed bug w/ printing string arrays in conditionals
	- handle modern patch programs (> 2.1)
	- handle packages w/ duplicate dependency names
	- --noscripts didn't get handled properly for removed packages
	- fixed handling of packages where %prereq creates users/groups

2.4.7 -> 2.4.8:
	- added noarch build compatibilities for ppc, m68k
	- fixed some minor typos (Florian La Roche)
	- added Obsoletes: tag, an upgrade removes packages which
	  have been obsoleted
	- updated rpmdepUpgradePackage() to deal with obsoletes tag
	- convertdb needed to read rpmrc
	- fixed ugly bug in package ordering
	- archivesize tag was incorrect for packages with hard links
	- moved popt into a separate library
	- directory created with %doc is now name-version (dropped
          the release)
	- added buildarch/buildos macros
	- added %ghost file option
	- updated linux.req to only find requirements for exectuable files

2.4.6 -> 2.4.7:
	- had some wrong month lengths in changelog date parsing
	- updated fine-requires (Linux version) to add lines for shell
	  scripts (Donnie Barnes)
	- didn't package / properly
	- pre/post script processing had some erroneous free() calls
	- fixed typos for HP archs in lib/rpmrc.c
	- uname() results should go through *_canon tables before anything
	  else happens
	- set -x in debug shells, not -xs

2.4.5 -> 2.4.6:
	- added os_canon entries for BSD/OS and NextStep
	- replaced include of <malloc.h> with includes of <stdlib.h>