@@ -2,6 +2,7 @@
 	- obsolete entries could cause segv's during upgrades
 	- sources now installed with uid/gid of process rather then
 	  the ids used when the src rpm was created
+	- don't give an error if missingok files don't exist during remove
 
 2.4.8 -> 2.4.9:
 	- fix for verification on systems where a single group id
